--- a/mainpage.html
+++ b/mainpage.html
@@ -6,15 +6,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="homepagecss.css">
+    <link rel="stylesheet" href="homepage_style.css">
     <title>New Tab</title>
 </head>
-<body style="background-image: url('https://apod.nasa.gov/apod/image/2309/IMG_3603.jpg');">
+
+
+<body>
     <h1 id="currentTime"> </h1>
     <h1 id="greetingHeading"> </h1>
     <h1 id="facts"> </h1>
     <script src="dailyfact.js"></script>
     <script src="time.js"></script>
+    <script src="images.js"></script>
+    <!-- <script src="contentScript.js"></script> -->
 </body>
 </html>
 
